--- a/templates/index.html
+++ b/templates/index.html
@@ -185,10 +185,9 @@
                 <hr class="light">
                 <h5>Contact Details</h5>
                 <hr class="light">
-                <p>+91 9823451278</p>
-                <p>contactus@riskassess.com</p>
-                <p>1901/B, Om Vikas</p>
-                <p>Mumbai, Maharashtra,400006</p>
+                <p>+91 9310018085</p>
+                <p>pchauhan7289@gmail.com</p>
+                <p>Noida, Uttar Pradesh, 201301</p>
             </div>
             <div class="col-md-4">
                 <hr class="light" />
@@ -202,7 +201,7 @@
                 <hr class="light">
                 <h5>Service Areas</h5>
                 <hr class="light" />
-                <p>Mumbai, Maharashtra</p>
+                <p>Noida, Uttar Pradesh</p>
                 <p>Ahmedabad, Gujarat</p>
                 <p>Chennai, Tamil Nadu</p>
                 <p>Bhopal, Madhya Pradesh</p>
