--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>RiskAssess | About Us</title>
+	<title>HealthGaurd | About Us</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
@@ -33,7 +33,7 @@ nav {
         <header>
             <!--Navigation Bar-->
 			<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-                <a class="navbar-brand" href="#"><b>RISK ASSESS APP</b></a>
+                <a class="navbar-brand" href="#"><b>HealthGaurd APP</b></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -63,8 +63,8 @@ nav {
 
   <div class="jumbotron">
     <div class="container">
-      <h1 class="display-4">About RiskAssess</h1>
-      <p>Welcome to RiskAssess!, a risk assessment system for medical institutions to generate risk assessments for their patients. RiskAssess started off as a company that formed strong relationships with medical institutions to help them generate their assessments with
+      <h1 class="display-4">About HealthGaurd</h1>
+      <p>Welcome to RiskAssess!, a risk assessment system for medical institutions to generate risk assessments for their patients. HealthGaurd started off as a company that formed strong relationships with medical institutions to help them generate their assessments with
          ease and maximum efficiency thus saving the organization's valuable time. Click below for Help.
       </p>
       <p><a class="btn btn-primary btn-lg" href="/help" role="button">Help &raquo;</a></p>
@@ -76,12 +76,12 @@ nav {
     <div class="row">
       <div class="col-md-4">
         <h2>Admin</h2>
-        <p>RiskAssess provides instituitons with an Admin account to generate risk assessments for their patients.</p>
+        <p>HealthGaurd provides instituitons with an Admin account to generate risk assessments for their patients.</p>
         <p><a class="btn btn-secondary" href="/login" role="button">Login &raquo;</a></p>
       </div>
       <div class="col-md-4">
         <h2>How does it Work?</h2>
-        <p>RiskAssess makes use of machine learning models that helps generate accurate risk assessments.</p>
+        <p>HealthGaurd makes use of machine learning models that helps generate accurate risk assessments.</p>
         <p><a class="btn btn-secondary" href="/login" role="button">Generate Assessment &raquo;</a></p>
       </div>
       <div class="col-md-4">
