--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>RiskAssess | Get Started</title>
+	<title>HealthGaurd | Get Started</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
@@ -33,7 +33,7 @@ nav {
         <header>
             <!--Navigation Bar-->
 			<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-                <a class="navbar-brand" href="#"><b>RISK ASSESS APP</b></a>
+                <a class="navbar-brand" href="#"><b>HealthGaurd APP</b></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -75,8 +75,8 @@ nav {
   <div class="jumbotron">
     <div class="container">
       <h1 class="display-4">Hello! Lets Get Started with RiskAssess</h1>
-      <p>Welcome to RiskAssess!, a risk assessment system for medical institutions to generate risk assessments for their patients. RiskAssess started off as a company that formed strong relationships with medical institutions to help them generate their assessments with ease and maximum efficiency thus saving the organization's valuable time.
-          Click below to learn about the diseases that RiskAssess is capable of assessing.</p>
+      <p>Welcome to RiskAssess!, a risk assessment system for medical institutions to generate risk assessments for their patients. HealthGaurd started off as a company that formed strong relationships with medical institutions to help them generate their assessments with ease and maximum efficiency thus saving the organization's valuable time.
+          Click below to learn about the diseases that HealthGaurd is capable of assessing.</p>
       <p><a class="btn btn-primary btn-lg" href="/disindex" role="button">Get Started &raquo;</a></p>
     </div>
   </div>
