--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,7 +2,7 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}
-RiskAssess | Sign Up
+HealthGaurd | Sign Up
 {% endblock %}
 
 {% block styles %}
