--- a/templates/disindex.html
+++ b/templates/disindex.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/carousel/">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='index.css') }}">
-	<title>RiskAssess | Disease Index</title>
+	<title>HealthGaurd | Disease Index</title>
 </head>
 <style>
 	 #main-footer
@@ -48,7 +48,7 @@
 
 	<header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-                <a class="navbar-brand" href="#"><b>RISK ASSESS</b></a>
+                <a class="navbar-brand" href="#"><b>HealthGaurd </b></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -89,8 +89,8 @@
     <br/>
     <br/>
 	<div class="container">
-        <h1 style="text-align:center;">RiskAssess - Disease Index</h1>
-    <p style="text-align:center;">This is a directory of all the diseases that RiskAssess can generate assessments for, this index provides in depth.
+        <h1 style="text-align:center;">HealthGaurd - Disease Index</h1>
+    <p style="text-align:center;">This is a directory of all the diseases that HealthGaurd can generate assessments for, this index provides in depth.
     details about the disease including its symptoms.</p>
     <h2>1. Breast Cancer </h2>
     <div style="text-align: center; margin-top: 20px">
