--- a/templates/index.html
+++ b/templates/index.html
@@ -118,7 +118,7 @@
     <div class="container-fluid">
     <div class="row jumbotron">
         <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
-            <p class="lead">Welcome to RiskAssess!, a risk assessment system for medical institutions to generate risk assessments.
+            <p class="lead">Welcome to HealthGaurd!, a risk assessment system for medical institutions to generate risk assessments.
                 If your organization faces any challenges while generating the risk assessment or has any concerns regarding the system please visit our help or about us pages.
             </p>
         </div>
@@ -208,7 +208,7 @@
             </div>
             <div class="col-12">
                 <hr class="light" />
-                <h5>&copy;riskassess.com</h5>
+                <h5>&copy;HealthGaurd.com</h5>
             </div>
         </div>
         </div>
