--- a/templates/login.html
+++ b/templates/login.html
@@ -14,7 +14,7 @@ HealthGaurd | Login
     <div class="container">
 
       <form class="form-signin" method="POST" action="/login">
-        <h1 style="text-align:center; text-size:30px">RiskAssess</h1>
+        <h1 style="text-align:center; text-size:30px">HealthGaurd</h1>
         <p style="text-align:center">Account Login</p>
         {{ form.hidden_tag() }}
         {{ wtf.form_field(form.username) }}
