--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -74,8 +74,8 @@ nav {
 
   <div class="jumbotron">
     <div class="container">
-      <h1 class="display-4">Hello! Lets Get Started with RiskAssess</h1>
-      <p>Welcome to RiskAssess!, a risk assessment system for medical institutions to generate risk assessments for their patients. HealthGaurd started off as a company that formed strong relationships with medical institutions to help them generate their assessments with ease and maximum efficiency thus saving the organization's valuable time.
+      <h1 class="display-4">Hello! Lets Get Started with HealthGaurd </h1>
+      <p>Welcome to HealthGaurd !, a risk assessment system for medical institutions to generate risk assessments for their patients. HealthGaurd started off as a company that formed strong relationships with medical institutions to help them generate their assessments with ease and maximum efficiency thus saving the organization's valuable time.
           Click below to learn about the diseases that HealthGaurd is capable of assessing.</p>
       <p><a class="btn btn-primary btn-lg" href="/disindex" role="button">Get Started &raquo;</a></p>
     </div>
@@ -124,7 +124,7 @@ nav {
 </main>
 
 <footer class="container">
-  <p>&copy;riskassess. All Rights Reserved</p>
+  <p>&copy;HealthGaurd . All Rights Reserved</p>
 </footer>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
       <script>window.jQuery || document.write('<script src="../assets/js/vendor/jquery.slim.min.js"><\/script>')</script><script src="../assets/dist/js/bootstrap.bundle.js"></script>
