--- a/templates/help.html
+++ b/templates/help.html
@@ -90,7 +90,7 @@ nav {
             </nav>
         </header>
         <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-            <h1 class="display-5">How to go about RiskAssess?</h1>
+            <h1 class="display-5">How to go about HealthGaurd?</h1>
             <p class="lead">Please find below the Steps for Administrators to go about the Risk Assessment System. Click to <a href="/about">Learn More</a></p>
         </div>
 
