--- a/templates/signup.html
+++ b/templates/signup.html
@@ -15,7 +15,7 @@ HealthGaurd | Sign Up
 <div class="container">
 
   <form class="form-signin" method="POST" action="/signup">
-    <h1 style="text-align:center; text-size:30px">RiskAssess</h1>
+    <h1 style="text-align:center; text-size:30px">HealthGaurd</h1>
     <p style="text-align:center">Create Account</p>
     {{ form.hidden_tag() }}
     {{ wtf.form_field(form.username) }}
